<resources>
    <string name="app_name">Lab2_Layout_ViewBinding</string>

    <!-- Login -->
    <string name="logo_desc">Logo VLU</string>
    <string name="login_title">ĐĂNG NHẬP HỆ THỐNG</string>
    <string name="hint_email">Địa chỉ Email</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="btn_login">ĐĂNG NHẬP</string>
    <string name="msg_missing_info">Vui lòng nhập email và mật khẩu</string>
    <string name="status_missing">Trạng thái: Vui lòng điền đủ dữ liệu</string>
    <string name="err_email_invalid">Email không hợp lệ</string>
    <string name="err_password_short">Mật khẩu tối thiểu 6 ký tự</string>
    <string name="status_login_ok">Đăng nhập thành công: %1$s</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="msg_forgot_password">Chức năng khôi phục mật khẩu sẽ làm ở các buổi sau</string>

    <!-- Profile -->
    <string name="avatar_desc">Ảnh đại diện</string>
    <string name="profile_name">Tăng Thoại Lâm</string>
    <string name="profile_role">Sinh viên Công nghệ thông tin</string>
    <string name="label_email">Email</string>
    <string name="label_mssv">MSSV</string>
    <string name="label_class">Lớp</string>
    <string name="value_mssv">2474802010210</string>
    <string name="value_class">72ITSE30603</string>
    <string name="btn_edit">Chỉnh sửa</string>
    <string name="btn_logout">Đăng xuất</string>
</resources>